--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -41,13 +41,17 @@ img {
 }
 
 input {
-  color: grey;
+  color: #000000;
   background-color: white;
   font-size: 18px;
   margin: 20px;
   padding: 20px;
   text-align: center;
   width: 300px;
+}
+
+input::placeholder {
+  color: gray;
 }
 
 a {
@@ -65,6 +69,11 @@ button {
   margin: 20px;
   padding: 20px;
   width: 200px;
+}
+
+button:disabled {
+  background-color: gray;
+  cursor: not-allowed;
 }
 
 // game page
@@ -104,7 +113,7 @@ h1 {
   align-items: flex-start;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 aside {
