--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -168,8 +168,38 @@ main {
   background-color: white;
   align-items: center;
   justify-content: center;
-  height: 50%;
+  padding: 20px;
+  // height: 50%;
   width: 50%;
+}
+
+#start-modal-content {
+  display: flex;
+  // height: 75%;
+  width: 75%;
+}
+
+#modal-round {
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 60px;
+  margin: 10px;
+}
+
+.modal-round {
+  display: flex;
+  flex-direction: column;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 60px;
+  margin: 10px;
+}
+
+.modal-text {
+  font-family: sans-serif;
+  font-size: 30px;
+  text-align: center;
+  width: 75%;
 }
 
 h2 {
@@ -219,16 +249,4 @@ h4 {
 
 .h4-be {
   font-family: $backend-font;
-}
-
-#modal-round {
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 60px;
-  margin-bottom: 10px;
-}
-
-.modal-text {
-  font-family: sans-serif;
-  font-size: 30px;
 }
