--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -201,9 +201,9 @@ main {
 
 .modal-text {
   font-family: sans-serif;
-  font-size: 30px;
-  text-align: center;
-  width: 75%;
+  font-size: 25px;
+  // text-align: center;
+  width: 95%;
 }
 
 h2 {
