--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,4 @@
-$primary-background: white;
-$frontend-font: 'Abril Fatface';
-$backend-font: 'Roboto Mono';
+@import 'variables';
 
 //splash page
 body {
@@ -69,11 +67,11 @@ button {
   margin: 20px;
   padding: 20px;
   width: 200px;
-}
 
-button:disabled {
-  background-color: gray;
-  cursor: not-allowed;
+  &:disabled {
+    background-color: gray;
+    cursor: not-allowed;
+  }
 }
 
 // game page
@@ -186,7 +184,7 @@ main {
 #modal-round {
   font-family: sans-serif;
   font-weight: bold;
-  font-size: 60px;
+  font-size: 50px;
   margin: 10px;
 }
 
@@ -195,15 +193,43 @@ main {
   flex-direction: column;
   font-family: sans-serif;
   font-weight: bold;
-  font-size: 60px;
+  font-size: 40px;
   margin: 10px;
 }
 
 .modal-text {
   font-family: sans-serif;
   font-size: 25px;
-  // text-align: center;
   width: 95%;
+}
+
+.multipliers {
+  height: 25px;
+  width: 100px;
+}
+
+#multi-inputs {
+  display: flex;
+}
+
+p {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+ul {
+  margin: 10px auto;
+}
+
+li {
+  list-style: none;
+  margin: 0 0 20px 0;
+}
+
+li:before {
+  content: '>';
+  margin-left: -20px;
+  margin-right: 10px;
 }
 
 h2 {
