Add footer with help and end game clickables

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,4 +1,5 @@
 $primary-background: white;
 $frontend-font: 'Abril Fatface';
 $backend-font: 'Roboto Mono';
+$click-color: #59D2ED;
 // $basic-font: ;
