--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -184,8 +184,12 @@ main {
 #modal-round {
   font-family: sans-serif;
   font-weight: bold;
-  font-size: 50px;
+  font-size: 40px;
   margin: 10px;
+}
+
+.modal-content {
+  width: 80%;
 }
 
 .modal-round {
@@ -193,7 +197,7 @@ main {
   flex-direction: column;
   font-family: sans-serif;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 35px;
   margin: 10px;
 }
 
