Add return to game functionality to end game modal

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -2,4 +2,5 @@ $primary-background: white;
 $frontend-font: 'Abril Fatface';
 $backend-font: 'Roboto Mono';
 $click-color: #59D2ED;
+$backgroundColor: #F05355;
 // $basic-font: ;
