Add button stying and similar text treatments

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -38,6 +38,7 @@ img {
   margin: 20px;
 }
 
+// all pages
 input {
   color: #000000;
   background-color: white;
@@ -52,18 +53,14 @@ input::placeholder {
   color: gray;
 }
 
-a {
-  color: #59D2ED;
-  font-size: 16px;
-  text-decoration: none;
-}
-
 button {
   background-color: $click-color;
   border: none;
   color: white;
   cursor: pointer;
   font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 1px;
   margin: 20px;
   padding: 20px;
   width: 200px;
@@ -174,6 +171,10 @@ main {
   width: 50%;
 }
 
+#fastmoney-modal-content {
+  width: 75%;
+}
+
 h6 {
   text-align: center;
   display: flex;
@@ -184,47 +185,9 @@ h6 {
   margin: 10px;
 }
 
-.modal-li {
-  font-family: sans-serif;
-  font-size: 18px;
-}
-
-.modal-p {
-  font-family: sans-serif;
-  font-size: 18px;
-}
-
-// #modal-round {
-//   font-family: sans-serif;
-//   font-weight: bold;
-//   font-size: 40px;
-//   margin: 10px;
-// }
-
-// .modal-content {
-//   width: 80%;
-// }
-//
-
-//
-// .modal-text {
-//   font-family: sans-serif;
-//   font-size: 25px;
-//   width: 95%;
-// }
-
-.multipliers {
-  height: 25px;
-  width: 100px;
-}
-
-#multi-inputs {
-  display: flex;
-}
-
 p {
-  font-size: 30px;
-  font-weight: 700;
+  font-family: sans-serif;
+  font-size: 18px;
 }
 
 ul {
@@ -232,6 +195,8 @@ ul {
 }
 
 li {
+  font-family: sans-serif;
+  font-size: 18px;
   list-style: none;
   margin: 0 0 20px 0;
 }
@@ -240,6 +205,10 @@ li:before {
   content: '>';
   margin-left: -20px;
   margin-right: 10px;
+}
+
+#multi-inputs {
+  display: flex;
 }
 
 h2 {
@@ -313,7 +282,8 @@ footer {
 
 footer p {
   color: $click-color;
-  font-size: 1em;
+  font-weight: bold;
+  font-size: 18px;
     &:hover {
       cursor: pointer;
     }
@@ -321,4 +291,31 @@ footer p {
 
 .help:hover {
   cursor: help;
+}
+
+.multipliers {
+  height: 25px;
+  width: 100px;
+}
+
+#multipliers {
+  position: relative;
+  font-family: Arial;
+}
+
+select {
+  background-color: white;
+  border: none;
+  font-size: 18px;
+  height: 50px;
+  margin: 10px;
+  outline: 1px solid white;
+  outline-offset: -1px;
+  width: 50px;
+}
+
+label {
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 25px;
 }
