Play with drop down styling and a few small text tweaks

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -190,6 +190,12 @@ p {
   font-size: 18px;
 }
 
+.winner-p {
+  font-family: sans-serif;
+  font-size: 25px;
+  margin: 15px;
+}
+
 ul {
   margin: 10px auto;
 }
