--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2,12 +2,19 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap);
 
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
 //splash page
 body {
   font-family: sans-serif;
   background-image: url("/images/feud_splash_bkgd.png");
   background-size: contain;
   background-repeat: no-repeat;
+  height: 100vh;
 }
 
 #splash-page {
@@ -189,7 +196,14 @@ h6 {
 
 p {
   font-family: sans-serif;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.endgame,
+.help
+ {
+  font-size: 23px;
 }
 
 .winner-p {
@@ -204,7 +218,8 @@ ul {
 
 li {
   font-family: sans-serif;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
   list-style: none;
   margin: 0 0 20px 0;
 }
@@ -284,6 +299,7 @@ h4 {
 }
 
 footer {
+  align-items: center;
   display: flex;
   justify-content: space-between;
 }
@@ -307,15 +323,16 @@ footer p {
 }
 
 #multipliers {
-  position: relative;
+  display: flex;
   font-family: Arial;
+  position: relative;
 }
 
 select {
   background-color: white;
   border: none;
   font-size: 18px;
-  height: 50px;
+  height: 25px;
   margin: 10px;
   outline: 1px solid white;
   outline-offset: -1px;
