Add hover effect for buttons and fix round tests

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,3 +3,8 @@ $frontend-font: 'Abril Fatface';
 $backend-font: 'Roboto Mono';
 $click-color: #59D2ED;
 $backgroundColor: #F05355;
+
+$outerBorderWidth: 4px;
+$innerBorderWidth: 4px;
+
+
