--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'buttons';
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap);
 
@@ -73,6 +74,10 @@ button {
   margin: 20px;
   padding: 20px;
   width: 200px;
+
+  &:enabled {
+     @include outline-out(); 
+  }
 
   &:disabled {
     background-color: gray;
