Add input focus background color

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,10 +1,12 @@
 $primary-background: white;
 $frontend-font: 'Abril Fatface';
 $backend-font: 'Roboto Mono';
+$simple-font: sans-serif;
 $click-color: #59D2ED;
-$backgroundColor: #F05355;
+$background-color: #F05355;
+$input-focus: linear-gradient(hsla(359°, 84%, 63%, .25), hsla(191°, 80%, 64%, .25));
 
-$outerBorderWidth: 4px;
-$innerBorderWidth: 4px;
+$outer-border-width: 4px;
+$inner-border-width: 4px;
 
 
