--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -1,8 +1,5 @@
 /* Outline Out */
-@mixin outline-out {
-  // $outerBorderWidth: 4px;
-  // $innerBorderWidth: 4px;
-
+@mixin outline-out($color) {
   position: relative;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   display: inline-block;
@@ -13,7 +10,7 @@
   &:before {
     content: '';
     position: absolute;
-    border: $click-color solid $outerBorderWidth;
+    border: $color solid $outerBorderWidth;
     top: 0;
     right: 0;
     bottom: 0;
@@ -25,10 +22,10 @@
   &:hover:before,
   &:focus:before,
   &:active:before {
-    top: -($outerBorderWidth + $innerBorderWidth);
-    right: -($outerBorderWidth + $innerBorderWidth);
-    bottom: -($outerBorderWidth + $innerBorderWidth);
-    left: -($outerBorderWidth + $innerBorderWidth);
+    top: -($outer-border-width + $inner-border-width);
+    right: -($outer-border-width + $inner-border-width);
+    bottom: -($outer-border-width + $inner-border-width);
+    left: -($outer-border-width + $inner-border-width);
   }
 }
 
