Add fade in/out effects to modals and appened items

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -10,7 +10,7 @@
   &:before {
     content: '';
     position: absolute;
-    border: $color solid $outerBorderWidth;
+    border: $color solid $outer-border-width;
     top: 0;
     right: 0;
     bottom: 0;
