Change linear slant and button focus

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -4,8 +4,7 @@ $backend-font: 'Roboto Mono';
 $simple-font: sans-serif;
 $click-color: #59D2ED;
 $background-color: #F05355;
-$input-focus: linear-gradient(hsla(359°, 84%, 63%, .25), hsla(191°, 80%, 64%, .25));
-
+$input-focus: linear-gradient(165deg, hsla(359°, 84%, 63%, .4), 50%, hsla(191°, 80%, 64%, .5));
 $outer-border-width: 4px;
 $inner-border-width: 4px;
 
