--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -12,7 +12,7 @@
 //splash page
 body {
   font-family: $simple-font;
-  background-image: url("/images/feud_splash_bkgd.png");
+  background-image: url("../images/feud_splash_bkgd.png");
   background-size: contain;
   background-repeat: no-repeat;
   height: 100vh;
@@ -206,7 +206,7 @@ main {
 .modal-content {
   align-items: center;
   background-color: white;
-  background-image: url("/images/feud_modal_bkgd.png");
+  background-image: url("../images/feud_modal_bkgd.png");
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
