--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -135,6 +135,7 @@ header {
 }
 
 #game-header {
+  font-size: 30px;
   margin-left: 75px;
   text-align: center;
 }
@@ -236,7 +237,6 @@ h6 {
   flex-direction: column;
   font-family: $simple-font;
   font-weight: bold;
-  // font-size: 35px;
   font-size: 30px;
   margin: 10px;
 }
